<resources>
    <string name="app_name">Pocket Management</string>
    <string name="title_activity_main">CashKeeper</string>
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="Budget">Budget</string>
    <string name="Outcome">Outcome</string>
    <string name="Setting">Setting</string>
    <string name="Password">Password</string>
    <string name="Notification">Notification</string>
    <string name="Export">Export</string>
    <string name="Currency">Currency</string>
    <string name="Language">Language</string>
    <string name="Next">Next</string>
    <string name="Overview">Overview</string>
    <string name="Graph">Graph</string>
    <string name="Business">Business</string>
    <string name="Extra_income">Extra income</string>
    <string name="Gifts">Gifts</string>
    <string name="Salary">Salary</string>
    <string name="Income">INCOME</string>
    <string name="Bill">Bill</string>
    <string name="Car">Car</string>
    <string name="Entertain">Entertainment</string>
    <string name="Food">Food</string>
    <string name="Love">Love</string>
    <string name="Shopping">Shopping</string>
    <string name="Transport">Transport</string>
    <string name="Travel">Travel</string>
    <string name="Add">Add</string>
    <!--  เกี่ยวกับกล้อง-->
    <string name="pick_image_intent_text">Choose Image</string>
    <string name="Take_Photo">Take Photo</string>
    <string name="Choose_from_gallery">Choose from gallery</string>
    <string name="Cancel">Cancel</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_mapgoogle">Map</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    //SpinnerGraph
    <string-array name="GraphType_Array">
        <item>BarChart</item>
        <item>PieChart</item>
        <item>LineChart</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
